flux/apps/sillytavern/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sillytavern
  namespace: sillytavern
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sillytavern
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sillytavern
    spec:
      securityContext:
        readOnlyRootFilesystem: false
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
        fsGroupChangePolicy: "Always"
      containers:
        - name: sillytavern
          image: ghcr.io/sillytavern/sillytavern:1.15.0
          imagePullPolicy: Always
          ports:
            - name: sillytavern
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /home/node/app/config
              name: sillytavern-config
            - mountPath: /home/node/app/data
              name: sillytavern-data
            - mountPath: /home/node/app/plugins
              name: sillytavern-plugins
          resources:
            requests:
              memory: "250M"
              cpu: "250m"
            limits:
              memory: "1G"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /login
              port: sillytavern
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: sillytavern
            failureThreshold: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: sillytavern
            failureThreshold: 30
            periodSeconds: 10
      dnsConfig:
        options:
          - name: ndots
            value: "1"

      volumes:
        - name: sillytavern-config
          persistentVolumeClaim:
            claimName: sillytavern-config
        - name: sillytavern-data
          persistentVolumeClaim:
            claimName: sillytavern-data-qnap
        - name: sillytavern-plugins
          persistentVolumeClaim:
            claimName: sillytavern-plugins
